# reportmate-mcp

./: .gitignore  COMMERCIAL-LICENSE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml  ci.yml
src/reportmate_mcp/: __init__.py  __main__.py  client.py  config.py  server.py
tests/: test_mcp.py
