[project]
name = "reportmate-mcp"
dynamic = ["version"]
description = "ReportMate MCP server - expose your device fleet to AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
]

[project.scripts]
reportmate-mcp = "reportmate_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/reportmate_mcp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/reportmate_mcp"]
